--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#519aea</color>
+    <color name="colorPrimaryDark">#2b3842</color>
+    <color name="colorGreen">#96c864</color>
+    <color name="colorRed">#e6505f</color>
+    <color name="white">#ffffffff</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="gray">#efefef</color>
+    <color name="darkGray">#afafaf</color>
 </resources>
