--- a/app/src/main/res/layout/activity_study_lesson.xml
+++ b/app/src/main/res/layout/activity_study_lesson.xml
@@ -4,6 +4,53 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StudyLesson">
+    tools:context=".StudyLesson"
+    android:background="@color/colorPrimaryDark">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Animal"
+        android:id="@+id/lesson_name"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textAlignment="center"
+        android:textSize="40dp"
+        android:textColor="@color/white"/>
+
+    <TextView
+        android:id="@+id/process"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="3/10"
+        android:textAlignment="center"
+        android:textColor="@color/colorGreen"
+        android:textSize="35dp"
+        app:layout_constraintTop_toBottomOf="@id/lesson_name" />
+
+    <include
+        android:id="@+id/word_item"
+        layout="@layout/word_item"
+        android:layout_width="350dp"
+        android:layout_height="400dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/process" />
+
+    <TextView
+        android:id="@+id/timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:text="5s"
+        android:textColor="@color/colorRed"
+        android:textSize="35dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/word_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
