--- a/app/src/main/res/layout/word_item.xml
+++ b/app/src/main/res/layout/word_item.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="350dp"
-    android:layout_height="400dp"
+    android:layout_height="390dp"
     android:background="@color/white"
     >
 
@@ -34,11 +34,11 @@
         app:layout_constraintTop_toBottomOf="@+id/pronunciation"></androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
-        android:layout_width="310dp"
-        android:layout_height="310dp"
+        android:id="@+id/word_image"
+        android:layout_width="290dp"
+        android:layout_height="290dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:src="@drawable/animal_lesson"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
