--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="gray">#efefef</color>
     <color name="darkGray">#afafaf</color>
+    <color name="black">#000000</color>
 </resources>
