--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -54,6 +54,7 @@
             android:text="37"
             android:textColor="@color/black"
             android:layout_marginHorizontal="15dp"
+            android:id="@+id/questionScore"
             android:textSize="30dp"/>
     </LinearLayout>
     <LinearLayout
