--- a/app/src/main/res/layout/word_item.xml
+++ b/app/src/main/res/layout/word_item.xml
@@ -10,7 +10,7 @@
         android:id="@+id/word"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Giraffe"
+        android:text=""
         android:textAlignment="center"
         android:textSize="40dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="25dp"
-        android:text="/dʒɪˈrɑːf/"
+        android:text=""
         android:textAlignment="center"
         app:layout_constraintTop_toBottomOf="@+id/word"/>
 
